Fix line wrapping in status message

--- a/src/components/status/StatusMessage/StatusMessage.module.css
+++ b/src/components/status/StatusMessage/StatusMessage.module.css
@@ -1,6 +1,8 @@
 .statusMessage {
   font-size: 200%;
   font-weight: bold;
+  line-height: 150%;
+  text-align: center;
 }
 
 .success {
